Fix link text wrapping

--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ action > *:focus {
 }
 .project-link {
   padding: 1rem 0;
-  word-wrap: break-word;
+  word-break: break-all;
 }
 .project-link a {
   color: var(--link-color);
